Full update of Alpaca to handle their new Crypto offering.